fix: multithreading trafficlight controller